2010-05-31 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/simi.c, debugger/mcs51/cmd.c, debugger/mcs51/sdcdb.c,
	  debugger/mcs51/sdcdb.h: enhanced help text formartting, added usage
	  (-h, -?, --help) and verbose (-v) command line options, SDCDB_VERSION
	  bumped to 0.9
	* doc/sdccman.lyx: asxxxx and aslink renamed to sdas and sdld

2010-05-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Minor peephole improvement.

2010-05-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCcse.c:
	  Simplified division optimization.
	* src/z80/gen.c:
	  Fixed comment alignment.
	* src/z80/peep.c,
	  src/z80/peeph-z80.def:
	  Peephole improvements, mostly negation.

2010-05-24 Borut Razem <borut.razem AT siol.net>

	* src/SDCC.y, src/SDCCsymt.h: test if the parameter is a valid storage
	  class specifier
	* src/hc08/gen.c, support/regression/tests/bug1875933.c:
	  fixed bug #3006063: xor broken

2010-05-23 Philipp Klaus Krause <pkk AT spth.de>
	* support/regression/tests/bug1875933.c:
	  Disabled recently introduced regression test on hc08, since it never worked there.

2010-05-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	  src/z80/peeph-z80.def:
	  Minor peephole improvements.

2010-05-23 Borut Razem <borut.razem AT siol.net>

	* src/SDCCerr.c, src/SDCCerr.h, src/SDCCsymt.h, src/SDCC.y:
	  fixed bug #2811521: sdcc doesn't accept register storage class
	  specifier in func

2010-05-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/gen.c,
	  src/z80/gen.c,
	  src/hc08/gen.c,
	  src/ds390/gen.c,
	  support/regression/tests/bug1875933.c:
	  Completed fix for #1875933 applying #2892763.

2010-05-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c,
	  src/z80/gen.c,
	  support/regression/tests/memory.c:
	  Fixed bug #2995398.

2010-05-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c:
	  A tiny step toward implementing #1921061.

2010-05-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def: